Fixed Footer.css relative positioning which was broken in a previous commit that modified footer styles.

--- a/styles/Footer.css
+++ b/styles/Footer.css
@@ -6,6 +6,7 @@
 }
 
 footer {
+  position: relative;
   width: 100%;
   padding: 0;
   margin: 0;
